rapprochementbanquairemf/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapprochement-backend
  labels:
    app: rapprochement-backend
    type: backend
spec:
  selector:
    matchLabels:
      app: rapprochement-backend
      type: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rapprochement-backend
        type: backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker1erpnode
      imagePullSecrets:
       - name: regcred
      containers:
        - name: rapprochement-backend
          image: 192.168.2.225:5000/rapprochement:0.0.1-SNAPSHOT
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "2"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 8092
              protocol: TCP
          imagePullPolicy: Always
